--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@
     width:1100px;
     height:250px;
 }
-ul li{
+section{
+    display:flex;
+}
+ul {
+    list-style-type: none;
+}
+li{
     list-style-type: none;
 }
