--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #banner{
-    width:1100px;
+    width:auto;
     height:250px;
     background:#FFF7AC;
     margin:none;
@@ -7,7 +7,7 @@
 }
 #banner:hover{
     background-color: greenyellow;
-    width: 1400px;
+    height: 350px;
 }
 h1{
     font:'Pixelify Sans';
