--- a/Journal/styles.css
+++ b/Journal/styles.css
@@ -1,5 +1,9 @@
 body{
-    background-color: blanchedalmond;
+    background-color: rgb(0, 149, 255);
+}
+article{
+    display: block;
+    background-image: -w;
 }
 h2{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -15,7 +19,7 @@ p{
 }
 a{
     font-weight: bolder;
-    color: rgb(148, 83, 240);
+    color: rgb(250, 255, 107);
     text-decoration: none;
 }
 img{
