--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-h2{color: #FFF7AC;}
+h2{color: #00bb10;}
 main{
     display:flex;
     padding: 10px;
@@ -8,7 +8,8 @@ main{
     min-height: 400px;
 }
 body{
-    background: #455FC0;
+    background: url(Images/background.gif);
+    background-size: 25%;
 }
 #left{
     display:block;
@@ -19,9 +20,17 @@ body{
 }
 #middle{
     display:block;
+    background-image: url(Images/left_facing.png);
+    background-size: contain;
+    background-size: 100%;
+    background-repeat: no-repeat; 
 }
 #right{
     display:block;
+    background-image: url(Images/right_facing.png);
+    background-size: contain;
+    background-size: 100%;
+    background-repeat: no-repeat; 
 }
 ul {
     list-style-type: none;
@@ -31,7 +40,8 @@ li a{
 }
 a{
     text-decoration: none;
-    color: #FFF7AC;
+    color: #00bb10;
+    font-weight: bold;
 }
 a:hover{color: greenyellow;}
 footer{
