--- a/Journal/styles.css
+++ b/Journal/styles.css
@@ -1,38 +1,49 @@
+
 body{
     background-color: #5e81ff;
-}
-article{
-    display: block;
-    margin:30px;
 
 }
+article{
+    display: flex;
+    background-image: url(Images/pic.png);
+    background-size: contain;
+    background-size: 100%;
+    background-repeat: no-repeat;  
+    max-width: 1500px;
+    margin: 50px;
+
+}
+.paragraph{
+    display: block;
+    padding: 175px;
+}
 h2{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
+    padding-left: 100px;
     margin-left: auto;
     margin-right: auto;
-    text-align:  center;
+    text-align:  left;
 }
 p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
+    font-weight: 500;
     color: rgb(0, 0, 0);;
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 0px;
     padding-top: 0px;
-    /* background-image: url(Images/greencloud.png);
-    background-size: contain;
-    background-size: 40% 100%;
-    background-repeat: no-repeat;  */
 }
-a{
-    font-weight: bold;
-    color: rgb(250, 255, 107);
-    text-decoration: none;
-}
-img{
+/* img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 50px;
+    max-width: 500px;
+    max-height: 250px;
+    padding-top: 250px;
+    padding-right: 250px;
+} */
+a{
+    font-weight: bold;
+    color: #5e81ff;
+    text-decoration: none;
 }
