--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 
-h2{color: #00bb10;}
+h2{
+    font-family: SixtyFour;
+    color: #00bb10;
+    text-align: center;
+    font-size: larger;
+}
 main{
     display:flex;
     padding: 10px;
@@ -12,25 +17,45 @@ body{
     background-size: 25%;
 }
 #left{
-    display:block;
+    top: 120px;
+    left:150px;
+    min-width: 600px;
+    position: relative;
     background-image: url(Images/right_facing.png);
     background-size: contain;
     background-size: 100%;
     background-repeat: no-repeat; 
 }
 #middle{
-    display:block;
+    top: 300px;
+    min-width: 500px;
+    position: relative;
     background-image: url(Images/left_facing.png);
     background-size: contain;
     background-size: 100%;
     background-repeat: no-repeat; 
 }
 #right{
-    display:block;
+    top: 100px;
+    right:450px;
+    min-width: 200px;
+    position: relative;
     background-image: url(Images/right_facing.png);
     background-size: contain;
     background-size: 100%;
     background-repeat: no-repeat; 
+}
+#left:hover{
+    box-shadow: 5px 5px 5px greenyellow;
+    z-index: 1;
+}
+#middle:hover{
+    box-shadow: 5px 5px 5px greenyellow;
+    z-index: 1;
+}
+#right:hover{
+    box-shadow: 5px 5px 5px greenyellow;
+    z-index: 1;
 }
 ul {
     list-style-type: none;
@@ -39,28 +64,29 @@ li a{
     list-style: none;
 }
 a{
+    font-family: SixtyFour;
     text-decoration: none;
     color: #00bb10;
     font-weight: bold;
+    margin-left: 20%;
 }
 a:hover{color: greenyellow;}
 footer{
+    font-family: SixtyFour;
     background: #FFF7AC;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     color: #ff9500;
-    text-align: center;
+    text-align: left;
 }
 p{
     margin: 5px;
     font-weight: bold;
 }
-#foot{    
-    font:1em;
-    font-weight: bold;
-    justify-content: center;
+#email{    
+    font-family: SixtyFour;
     color: #ff9500;
-    text-align: center;
+    text-align: left;
 }
