--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-
-h2{
-    font-family: SixtyFour;
-    color: #00bb10;
-    text-align: center;
-    font-size: larger;
-}
 main{
     display:flex;
     padding: 10px;
@@ -18,7 +11,7 @@ body{
 }
 #left{
     top: 120px;
-    left:150px;
+    left:250px;
     min-width: 600px;
     position: relative;
     background-image: url(Images/right_facing.png);
@@ -37,8 +30,8 @@ body{
 }
 #right{
     top: 100px;
-    right:450px;
-    min-width: 200px;
+    right:400px;
+    min-width: 300px;
     position: relative;
     background-image: url(Images/right_facing.png);
     background-size: contain;
@@ -46,29 +39,45 @@ body{
     background-repeat: no-repeat; 
 }
 #left:hover{
-    box-shadow: 5px 5px 5px greenyellow;
+    /* box-shadow: 5px 5px 5px greenyellow; */
     z-index: 1;
 }
 #middle:hover{
-    box-shadow: 5px 5px 5px greenyellow;
+    /* box-shadow: 5px 5px 5px greenyellow; */
     z-index: 1;
 }
 #right:hover{
-    box-shadow: 5px 5px 5px greenyellow;
+    /* box-shadow: 5px 5px 5px greenyellow; */
     z-index: 1;
+}
+#studio{
+    position: relative;
+    top: 80px;
+    left: -60px;
+}
+#rd{
+    position: relative;
+    top:100px;
+}
+#final{
+    position: relative;
+    top:70px;
+    left: -50px;
 }
 ul {
     list-style-type: none;
 }
 li a{
     list-style: none;
+    margin-left: 20%;
+    margin-top: 150px;
 }
 a{
     font-family: SixtyFour;
     text-decoration: none;
     color: #00bb10;
     font-weight: bold;
-    margin-left: 20%;
+    font-size: small;
 }
 a:hover{color: greenyellow;}
 footer{
@@ -81,8 +90,14 @@ footer{
     color: #ff9500;
     text-align: left;
 }
+h2{
+    font-family: SixtyFour;
+    color: #00bb10;
+    text-align: center;
+    font-size: larger;
+}
 p{
-    margin: 5px;
+    margin: 10px;
     font-weight: bold;
 }
 #email{    
