--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -1,5 +1,4 @@
 body{
-    /* background-color: #3C1B72; */
     font-family: SixtyFour;
 }
 html{
@@ -18,6 +17,8 @@ fieldset{
 h1{
     color: #A2F255;
     margin-top: 50%;
+    max-width: 550px;
+    min-width: 550px;
 }
 label{
     color: #A2F255;
@@ -37,20 +38,18 @@ input{
 input[type="text"]:focus {
     box-shadow: 0 5px 8px 0 rgb(99, 0, 0), 0 5px 20px 0 rgba(99, 0, 0);
 }
-input[type='submit']{
+#button{
+    background-color: transparent;
     display: block;
+    text-align: center;
     min-width: 150px;
+    max-width: 150px;
     border:3px solid green;
     border-radius: 10px;
     background-color: transparent;
     color: #A2F255;
-    margin:10px;
+    margin-left:30%;
     cursor: pointer;
-    margin-left: -400px;
-}
-button{
-    background-color: transparent;
-    border: none;
 }
 footer{
     background-color: rgb(150, 90, 190);
