--- a/GameOn/styles.css
+++ b/GameOn/styles.css
@@ -1,7 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    color: #333;
+    color: white;
+    background-color: #000000;
 }
 
 #score span {
