--- a/GameOn/styles.css
+++ b/GameOn/styles.css
@@ -5,49 +5,71 @@ body {
     background-color: #000000;
 }
 
-#score span {
-    font-weight: bold;
+#pad1, #pad2, #pad3, #pad4, #pad5 {
+    opacity: 0.6;
+    height: 500px;
 }
 
-#game {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-}
-
-#game div{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: all 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-}
-
-#pad1 { background-color: #970321;}
-#pad2 { background-color: #05057b;}
-#pad3 { background-color: #b59e0d;}
-#pad4 { background-color: #154d25;}
-#pad5 { background-color: #ac1d77;}
-
-#game div:hover {
-    cursor: pointer;
+@keyframes wiggle {
+    0% { transform: rotate(0deg); }
+   80% { transform: rotate(0deg); }
+   85% { transform: rotate(5deg); }
+   95% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
 }
 
 .on {
-    opacity: 0.4;
-    transform: scale(30%);
+    opacity: 1;
+    animation: wiggle 2.5s;
+}
+
+img {
+    max-height: 425px;
+    padding: 50% 50%;
 }
 
 #action a {
     display: block;
     text-decoration: none;
     padding: 15px;
-    background-color: darkgrey;
-    border: 2px solid rgb(113, 112, 112);
-    border-radius: 5px;
+    font-style: SixtyFour;
+    background-color: transparent;
+    border: 2px solid rgb(229, 164, 255);
+    border-radius: 20px;
     width: 100px;
     margin: auto;
-    color: #333;
+    color: rgb(229, 164, 255);
     font-weight: bold;
 }
 
+#score span {
+    font-weight: bold;
+}
 
+#game div {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transition: all 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+    margin: 0 10px;
+}
+
+#game div:hover {
+    cursor: pointer;
+}
+
+#game {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    height: 500px;
+}
+
+#text {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#text p {
+    margin: 5px;
+}
