--- a/Final/styles.css
+++ b/Final/styles.css
@@ -21,7 +21,8 @@ p{
     font-size: 20px;
     padding-right:250px;
     padding-left: 250px;
-    width: 800px;
+    padding-bottom:none;
+    width: 900px;
     color:#bcffe2;
 }
 a{
@@ -29,3 +30,20 @@ a{
     color: rgb(188, 255, 32);
     text-decoration: none;
 }
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border: #ace5cc solid 2px;
+    border-radius: 20px;
+}
+figure{
+    padding-bottom: 50px;
+}
+/* figcaption{
+    font-family: "Fredoka", sans-serif;
+    margin-left: 50%;
+    margin-top: 20px;
+    margin-right: auto;
+    color:#ace5cc;} */
