--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body{
     top: 100px;
     right:400px;
     min-width: 300px;
+    max-height: 300px;
     position: relative;
     background-size: contain;
     background-size: 100%;
