--- a/Final/styles.css
+++ b/Final/styles.css
@@ -23,7 +23,7 @@ p{
     padding-left: 250px;
     padding-bottom:none;
     width: 900px;
-    color:#bcffe2;
+    color:#dcfff0;
 }
 a{
     font-weight: bolder;
@@ -34,7 +34,7 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 40%;
     border: #ace5cc solid 2px;
     border-radius: 20px;
 }
