--- a/Final/final/styles.css
+++ b/Final/final/styles.css
@@ -87,12 +87,17 @@ body {
   font-size: medium;
 }
 .overlay article p {
-  color: white; 
+  font-family: "Protest Riot", sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  color: #ace5cc;
   margin-left: 150px;
+  font-size: larger;
 }
 
 .overlay img {
-  max-width: 50%;
+  max-width: 60%;
   height: auto;
   padding: 30px;
   background-image: url(images/polaroid.png);
@@ -100,26 +105,34 @@ body {
 }
 
 .overlay button.close {
-  font-family: "Fredoka", sans-serif;
-  font-size: medium;
   position: absolute;
-  bottom: -140px;
-  right:-120px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border: #526A21 solid 3px;
-  border-radius: 15px;
-  padding: 8px;
-  padding-left: 15px;
-  padding-right: 15px;
+  bottom: -130px;
+  right: -250px;
+  background-color: transparent;
+  background-image: none;
+  border: none;
   cursor: pointer;
-  font-size: 18px;
-  color: rgb(255, 255, 255);
-  cursor: pointer;
+  outline: none;
+}
+
+.overlay button.close img {
+  background-color: transparent;
+  background-image: none;
+  width: 40px;
+  height: 40px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.overlay button.close:hover img {
+  transform: scale(1.1);
 }
 
 .overlay article .thoughts {
   margin-top: 20px; 
   padding-left: 150px;
+}
+.input-field::placeholder {
+  text-align: top;
 }
 .overlay article .submit {
   display: block; 
@@ -138,7 +151,13 @@ body {
   color: rgb(255, 255, 255);
   cursor: pointer;
 }
-
+time{
+  font-family: "Protest Riot", sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  color: #ace5cc;
+}
 .overlay article .thoughts p {
   color: white; 
   font-family: "Fredoka", sans-serif;
@@ -152,13 +171,13 @@ body {
   margin-top: 5px;
   border: 2px solid rgba(255, 255, 255);
   border-radius: 5px;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0.5);
   font-family: "Fredoka", sans-serif;
   font-weight: 500;
   box-sizing: border-box;
   min-width: 380px; 
-  min-height: 280px; 
+  min-height: 210px; 
   overflow-y: auto; 
   resize: none; 
   cursor: pointer;
@@ -221,3 +240,29 @@ body {
   transition: transform 0.3s ease-in-out;
   cursor: pointer;
 }
+.back {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: transparent;
+  background-image: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.back img {
+  background-color: transparent;
+  background-image: none;
+  width: 40px;
+  height: 40px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.back:hover img {
+  transform: scale(1.1);
+}
+
+/* .locimg img{
+  padding-top: 20px !important;
+} */
